--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://fahad0nodejs:fahad@cluster0.d6hnl2v.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://fahad:fahad@atlascluster.xnfyjw4.mongodb.net/?retryWrites=true&w=majority&appName=AtlasCluster
